# Fusemachine_P1

Fuse_project/: Makefile  README.md  pyproject.toml  requirements.txt
Fuse_project/App/: main.py
Fuse_project/docs/: mkdocs.yml
Fuse_project/docs/docs/: index.md
Fuse_project/four_bar_linkage/: __init__.py  dataset.py  features.py  plots.py
Fuse_project/four_bar_linkage/modeling/: predict.py  train.py
Fuse_project/notebooks/: curve.csv  fourbar_animator.py  optimizer.py  random_curve_generator.py  test.csv
